# tamagotchi-classic

./: .gitignore  README.md  Taskfile.yml
docs/: getting-started.md
firmware/: Cargo.toml  README.md
firmware/core/: Cargo.toml
firmware/core/src/: lib.rs
firmware/desktop/: Cargo.toml
firmware/desktop/src/: main.rs  sprites.rs
firmware/esp32/: Cargo.toml
firmware/esp32/.cargo/: config.toml
firmware/esp32/src/: main.rs  sprites.rs
hardware/: BOM.md  ESP32-GUIDE.md  assembly-guide.md
scripts/: setup-dev.sh
