[package]
name = "tamagochi-esp32"
version = "1.0.0"
edition = "2021"

[dependencies]
tamagochi-core = { path = "../core" }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44"
embedded-hal = "1.0"
embedded-graphics = "0.8"
ssd1306 = "0.9"
heapless = "0.8"

[build-dependencies]
embuild = "0.32"

[[bin]]
name = "tamagochi-esp32"
path = "src/main.rs"
